Fixed app on firefox
App now uses a newer version of jquery and no longer becomes unresponsive on page load, also the menu button is correctly aligned now

--- a/resources/sass/style.sass
+++ b/resources/sass/style.sass
@@ -139,26 +139,24 @@ button
 #you-button
   position: relative
   margin: 0.4em
-  width: 5em
+  width: 6em
   border: none
   background-color: $color-3
   border-radius: 2px
   box-shadow: inset 0 -1px 2px $color-light-shadow
-  display: flex
-  flex-direction: row
-  text-align: center
+
   padding: 0
-  &>div
-    margin-right: auto
-    margin-left: auto
-  &>.fa-chevron-right
-    display: inline-block
-    margin-top: auto
-    margin-bottom: auto
-    flex: 1 0
-  &>.fa-bars
-    text-align: center
-    flex: 1 0
+  &>#you-button-container
+    width: 100%
+    display: flex
+    align-items: center
+    &>span
+      margin-left: auto
+      margin-right: auto
+    &>.fa-chevron-right
+      flex: 0 1 2em
+    &>.fa-bars
+      flex: 0 1 3em
   &:hover
     background-color: darken($color-3, 5%)
     box-shadow: inset 0 -2px 2px lighten($color-light-shadow, 50%)
